# VGASimpleDriverESP32

./: .gitignore  CMakeLists.txt  README.md  font_check.py  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/src/include/: 640x480.h  VGA.h  buffer.h  buffer_handler.h  constants.h  i2s_handler.h  i2s_manager.h  lldesc.h  uart_handler.h  vga_buffer.h  vga_handler.h  vga_i2s_manager.h  vga_lldesc.h  vga_uart_manager.h  vga_video_manager.h
main/src/include/font/: font_basic_ascii_8x8.h
main/src/include/struct/: struct_buffer.h  struct_dimensions.h  struct_i2s.h  struct_lldesc.h  struct_uart.h  struct_vga.h  struct_vga_private.h
main/src/include_o/: buffer_handler.h  vga_handler.h
main/src/src/: VGA.c  buffer.c  buffer_handler.c  i2s_handler.c  i2s_manager.c  lldesc.c  uart_handler.c  vga_buffer.c  vga_handler.c  vga_i2s_manager.c  vga_lldesc.c  vga_uart_manager.c  vga_video_manager.c
main/src/src_o/: buffer_handler.c  vga_handler.c
main_temp/: main.c  pattern_handler.h  resolution.c  resolution.h
src/include/: buffer_handler.h  buffer_resolution.h  res.h  resolution.h
src/src/: buffer_handler.c  pattern_handler.c
